--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div class="row">
         <div id="containment-wrapper" class="col-sm-8">
-            <img id="doge-meme-pic" img src=doge-meme.jpeg" alt="wow-doge-meme">
+            <img id="doge-meme-pic" img src=img/doge-meme.jpeg" alt="wow-doge-meme">
         </div>
         <div id="wow-output" class="col-sm-4">
             
